# VsProject

FFmpegDemo/YuvToH264/: CMakeLists.txt  main.c  video_encode.sln
FFmpegDemo/YuvToH264/Project1/: Project1.vcxproj  main.c
FFmpegDemo/h264_decode/: audiothread.cpp  ffmpegs.cpp  h264_decode.qtvscr  h264_decode.sln  mainwindow.cpp  mainwindow.h  videothread.cpp  videothread.h
FFmpegDemo/muxing_flv/: main.c  muxing_flv.sln  muxing_flv.vcxproj  muxing_flv.vcxproj.filters
FFmpegDemo/muxing_mp4/: audioencoder.cpp  main.cpp  muxing_mp4.qtvscr  muxing_mp4.sln  muxing_mp4.vcxproj  muxing_mp4.vcxproj.filters  videoencoder.cpp
FlvParser/: FlvParser.vcxproj  main.cpp
NetWork/Reactor/: Reactor.sln  Reactor.vcxproj  main.cpp  reactorSinglecb.h  reactor_bf.h  reactor_multicb.h
NetWork/TcpClient/: TcpClient.sln  TcpClient.vcxproj  main.cpp
NetWork/TcpSer/: TcpSer.sln  TcpSer.vcxproj  main.cpp
WASAPI/WASAPI/: WASAPI.sln  WASAPI.vcxproj  main.cpp
WASAPI/WSAAPI2/: WSAAPI2.sln  WSAAPI2.vcxproj  main.cpp
disarray/CameraPrint/: ConsoleApplication3.sln
disarray/CameraPrint/ConsoleApplication3/: ConsoleApplication3.vcxproj
disarray/procAmpTest/: mainwindow.cpp  mainwindow.ui  procAmpTest.sln  ui_mainwindow.h  untitled3.qtvscr  untitled3.vcxproj
openGl/sample_1/: sample_HelloWindow.sln
openGl/sample_1/05vary/: Vary.vcxproj  main.cpp
qml_DX11_test/: DXItem.cpp  DXItem.h  DirectXRendererItem.cpp  DirectXRendererItem.h  dxquickwindow.cpp  dxquickwindow.h  main.cpp  main.qml  qml.qrc  qml_DX11_test.sln  qml_DX11_test.vcxproj  qml_DX11_test.vcxproj.filters
(+49 files in other folders)
